FeedEntry now working
