# src/main/java/com/chaty/shrimpfarm/controller/ShrimpFarmController.java
@@ -1,5 +1,7 @@
 package com.chaty.shrimpfarm.controller;
 
+import java.util.List;
+
 import javax.validation.Valid;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -13,7 +15,7 @@ import com.chaty.shrimpfarm.model.FeedEntryModel;
 import com.chaty.shrimpfarm.repository.FeedEntryRepo;
 
 @RestController
-@RequestMapping("/farm")
+@RequestMapping("/farm/api")
 public class ShrimpFarmController {
 
 	@Autowired
@@ -24,10 +26,26 @@ public class ShrimpFarmController {
 		return feedEntryRepo.save(entry);
 	}
 	
+	@RequestMapping(path = "/feedEntry", method = RequestMethod.PUT)
+	public FeedEntryModel updateFeedEntry(@Valid @RequestBody FeedEntryModel entry) {
+		return feedEntryRepo.insert(entry);
+	}
+	
 	
 	@RequestMapping(path = "/getFeedEntry/{id}", method = RequestMethod.GET)
 	public FeedEntryModel getFeedEntry(@PathVariable("id") String id) {
 		return feedEntryRepo.findOne(id);
+	}
+	
+	@RequestMapping(path = "/deleteFeedEntry/{id}", method = RequestMethod.DELETE)
+	public void deleteFeedEntry(@PathVariable("id") String id) {
+		final FeedEntryModel feed = feedEntryRepo.findOne(id);
+		 feedEntryRepo.delete(feed);
+	}
+	
+	@RequestMapping(path = "/getFeedEntryList", method = RequestMethod.GET)
+	public List<FeedEntryModel> getFeedEntryList() {
+		return feedEntryRepo.findAll();
 	}
 
 }
